Внесены правки согласно рекомендации ментора

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <ul class="item-box">
         <li class="item-block block1">
           <a href="http://surl.li/yebi" target="_blank">
-            <img src="./img/Тустань.png" alt="Фортеця у скалі"
+            <img src="./img/фото1.png" alt="Фортеця у скалі"
           /></a>
           <h3 class="item-title">
             <a href="http://surl.li/yebi" target="_blank"
@@ -59,7 +59,7 @@
         </li>
         <li class="item-block block2">
           <a href="http://surl.li/bdjdz" target="_blank">
-            <img src="./img/Луцький_замок.png" alt="Замок" width="391px"
+            <img src="./img/фото2.png" alt="Замок" width="391px"
           /></a>
           <h3 class="item-title">
             <a href="http://surl.li/bdjdz" target="_blank">Луцький Замок</a>
@@ -68,7 +68,7 @@
         </li>
         <li class="item-block block3">
           <a href="http://surl.li/bdvpu" target="_blank">
-            <img src="./img/Камʼяна_могила.png" alt="Скеля та облака"
+            <img src="./img/фото3.png" alt="Скеля та облака"
           /></a>
           <h3 class="item-title">
             <a href="http://surl.li/bdvpu" target="_blank">Кам’яна Могила</a>
