исправлены ошибки позиционирования блоков

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               >Стародавній Тустань</a
             >
           </h3>
-          <p class="item-text">Середньовічна наскельна фортеця-град</p>
+          <p class="item-text">Середньовічна наскельна<br> фортеця-град</p>
         </li>
         <li class="item-block block2">
           <a href="http://surl.li/bdjdz" target="_blank">
@@ -80,14 +80,17 @@
 
     <!----------------------- Наша Україна --------------------->
     <section>
-      <h2 class="title map-title">Наша україна переможе!</h2>
+      <div class="map-box">
+        <h2 class="title map-title">Наша україна переможе!</h2>
+  
+        <div class="map">
+          <img src="./img/7e_edukation.png" alt="Карта України" />
+        </div>
+  
+        <div class="btn-block">
+          <a class="btn" href="#">GO</a>
+        </div>
 
-      <div class="map">
-        <img src="./img/7e_edukation.png" alt="Карта України" />
-      </div>
-
-      <div class="btn-block">
-        <a class="btn" href="#">GO</a>
       </div>
     </section>
 
